--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1413,4 +1413,61 @@ button:hover {
 
 .footer__contact {
   height: 321px;
+}
+
+@media (max-width: 375px) {
+  body {
+    height: 1732px;
+  }
+  body .section__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 375px;
+    height: 764px;
+    border-radius: 0px;
+  }
+  body .section__form div {
+    text-align: center;
+  }
+  body .section__form h2 {
+    width: 327px;
+    height: 36px;
+    margin-top: 72px;
+  }
+  body .section__form p {
+    width: 327px;
+    height: 125px;
+    margin-bottom: 60px;
+  }
+  body .section__form form {
+    width: 327px;
+    height: 338px;
+  }
+  body .section__form form input {
+    width: 327px;
+  }
+  body .section__form form textarea {
+    width: 327px;
+  }
+  body .section__form form button {
+    width: 152px;
+    height: 56px;
+    margin: 24px 0px 0px 0px;
+  }
+  body .section__location {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 375px;
+    height: 1188px;
+  }
 }/*# sourceMappingURL=style.css.map */
