--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -4,20 +4,14 @@
 }
 
 body {
-  @media screen and(max-width: 375px) {
-    max-width: 375px;
-    display: flex;
-    flex-direction: column;
-  }
+
   font-family: "Jost";
   max-width: 1440px;
   max-height: 2940px;
   margin: auto;
 
   header {
-    @media screen and(max-width: 375px) {
-      
-    }
+    
     display: flex;
     justify-content: space-between;
     width: 1111px;
@@ -26,24 +20,14 @@ body {
     
 
     img {
-      @media screen and(max-width: 375px) {
-        display: flex;
-        margin-left: 24px;
-      }
+     
       max-width: 197px;
       max-height: 27px;
       align-self: center;
     }
 
     nav {
-      @media (max-width: 375px) {
-      width: 327px;
-      margin: 0 auto;
-      }
       ul {
-        @media (max-width: 375px) {
-          display: none;
-        }
         display: flex;
         gap: 42px;
 
@@ -71,32 +55,19 @@ body {
   }
 
   main {
-    @media (max-width: 375px) {
-      
-    }
     position: relative;
     .section__rectangle {
-      @media (max-width: 375px) {
-      display: none;
-      }
       position: absolute;
       z-index: -1;
       margin-top: 350px;
     }
     .section__rectangle__upsidedown {
-      @media (max-width: 375px) {
-      display: none;
-      }
       position: absolute;
       z-index: -1;
       margin-top: 1700px;
       margin-left: 440px;
     }
     .section__services {
-      @media (max-width: 375px) {
-      width: 375px;
-      height: 843px;
-      }
       background-color: $pink;
       background-image: url("../img/rond2.png");
       background-repeat: no-repeat;
@@ -178,10 +149,6 @@ body {
     }
 
     .section__projects {
-      @media (max-width: 375px) {
-      width: 327px;
-      grid-template-areas: "a" "b" "c";
-      }
       display: grid;
       grid-template-columns: 1fr 1fr;
       grid-template-areas:
@@ -296,11 +263,6 @@ body {
     }
 
     .section__values {
-      @media (max-width: 375px) {
-      width: 327px;
-      display: flex;
-      flex-direction: column;
-      }
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
@@ -351,19 +313,12 @@ body {
   }
 
   footer {
-    @media screen and(max-width: 375px) {
-     width: 375px;
-     height: 1005px; 
-    }
     position: relative;
     z-index: auto;
     height: 393px;
 
     .section__contact {
-      @media screen and(max-width: 375px) {
-      width:327px;
-      height: 379px;
-      }
+      
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -511,7 +466,7 @@ body {
             }
           }
 
-          .section__contact {
+          .section__info {
             @include info;
           }
         }
@@ -541,5 +496,257 @@ body {
         }
       }
     }
+  }
+}
+
+
+@media screen and(max-width: 375px) {
+  body{
+    max-width: 375px;
+    margin:auto;
+    header{
+      width:375px;
+      margin:35px 24px 37px;
+      nav{
+        width: 327px;
+        ul{
+          display: none;
+        }
+      }
+    }
+    main{
+      display: flex;
+      flex-wrap: wrap;
+      .section__rectangle {
+        display: none;
+      }
+      .section__rectangle__upsidedown {
+        display: none;
+      }
+      .section__services{
+        width: 375px;
+        height: 843px;
+        margin: 0 auto 120px;
+        flex-wrap: wrap;
+        justify-content:flex-start;
+        article{
+          
+          div{
+            width: 327px;
+            margin: 80px 24px;
+            text-align: center;
+
+            h1{
+              font-size: 32px;
+              line-height: 36px;
+            }
+            p{
+              width:327px;
+              font-size: 15px;
+              line-height: 25px;
+            }
+          }
+        }
+        .services__img{
+         display: none;
+        }
+      }
+      .section__projects{
+        display: flex;
+        flex-direction: column;
+        width:327px;
+        height:798px;
+        gap:24px;
+        text-align: center;
+        .projects__web{
+          height: 250px;
+          a{
+            .projects__web__img{
+              img{
+                width: 327px;
+                height:250px;
+              }
+              .projects__web__text{
+                h1{
+                  width:215px;
+                  font-size: 28px;
+                  line-height: 36px;
+                  letter-spacing: 1.4px;
+                }
+                p{
+                  img{
+                    width:4px;
+                    height:8px;
+                  }
+                }
+              }
+            }
+          }
+        }
+        .projects__app{
+          height: 250px;
+          a{
+            .projects__app__img{
+              width: 327px;
+              height: 250px;
+              text-align: center;
+              img{
+                width: 327px;
+                height:250px;
+              }
+              .projects__app__text{
+                h1{
+                  width:215px;
+                  font-size: 28px;
+                  line-height: 36px;
+                  letter-spacing: 1.4px;
+                }
+                p{
+                  img{
+                    width:4px;
+                    height:8px;
+                  }
+                }
+              }
+            }
+          }
+        }
+        .projects__graphic{
+          height: 250px;
+          margin-bottom: 120px;
+          a{
+            .projects__graphic__img{
+              width: 327px;
+              height: 250px;
+              text-align: center;
+              img{
+                width: 327px;
+                height:250px;
+              }
+              .projects__graphic__text{
+                h1{
+                  width:255px;
+                  font-size: 28px;
+                  line-height: 36px;
+                  letter-spacing: 1.4px;
+                }
+                p{
+                  img{
+                    width:4px;
+                    height:8px;
+                  }
+                }
+              }
+            }
+          }
+        }
+      
+      }
+
+      .section__values{
+        flex-direction: column;
+        width: 327px;
+        height: 1396px;
+        margin: 0 24px 80px;
+        .values__passion{
+          p{
+            width: 327px;
+            height: 104px;
+            text-align: none;
+          }
+        }
+      }
+
+      
+    }
+
+    footer{
+      margin-top: 41px;
+      height: 1005px;
+      .section__contact{
+        width:327px;
+        height: 379px;
+        margin:0 auto -190px;
+        flex-direction: column;
+        text-align: center;
+        justify-content: flex-start;
+        background-size: 327px 379px;
+        border-radius: 15px;
+      
+
+        div {
+          margin:0;
+        }
+
+        h1{
+          width:279px;
+          height:82px;
+          font-size: 32px;
+          line-height: 36px;
+          text-align: center;
+          margin-top: 64px;
+        }
+
+        p{
+          margin-top: 6px;
+          width:279px;
+          height: 75px;
+          font-size: 15px;
+          line-height: 25px;
+          margin-bottom: 32px;
+        }
+      }
+
+      a{
+      margin: 0 auto;
+      }
+      .lower__container{
+        height: 815px;
+
+        .footer__nav{
+          div{
+            flex-direction: column;
+
+            .footer__nav__img{
+              margin-left: 87px;
+              margin-right: 91px;
+              margin-top: 253px;
+            }
+
+            ul{
+              flex-direction: column;
+              text-align: center;
+              margin: 32px auto 40px;
+              gap:32px;
+            }
+          }
+        }
+
+        hr{
+          width:327px ;
+        }
+
+        .inline__lower__container{
+          flex-direction: column;
+
+          .section__info{
+            flex-direction: column;
+            text-align: center;
+            margin: 40px auto;
+            width: 327px;
+            .info__address{
+              padding: 0;
+              margin-bottom: 40px;
+            }
+          }
+
+          .section__media{
+            margin: 0 95px 64px ;
+          }
+        }
+      }
+
+    }
+
   }
 }
