--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -104,6 +104,8 @@ button:hover {
       width: 375px;
       height: 764px;
       border-radius: 0px;
+      padding: 0;
+      margin-bottom: 192px;
       div{
         text-align: center;
       }
