--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1433,6 +1433,8 @@ button:hover {
     width: 375px;
     height: 764px;
     border-radius: 0px;
+    padding: 0;
+    margin-bottom: 192px;
   }
   body .section__form div {
     text-align: center;
