--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1473,6 +1473,152 @@ body .section__solutions div .solutions__img {
   width: 350px;
 }
 
+@media (max-width: 375px) {
+  body {
+    height: 3443px;
+  }
+  body .section__location__belgium {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    margin-top: 0;
+    margin-left: 24px;
+    margin-right: 24px;
+  }
+  body .section__location__belgium img {
+    height: 394px;
+    width: 375px;
+  }
+  body .section__location__belgium .box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 394px;
+    width: 375px;
+  }
+  body .section__location__belgium .box h2 {
+    margin: 80px 24px 24px 24px;
+    width: 327px;
+    height: 36px;
+    text-align: center;
+  }
+  body .section__location__belgium .box .box__txt {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  body .section__location__belgium .box .box__txt div {
+    width: 327px;
+    height: 75px;
+  }
+  body .section__location__australia {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 0;
+    margin-left: 24px;
+    margin-right: 24px;
+  }
+  body .section__location__australia img {
+    height: 394px;
+    width: 375px;
+  }
+  body .section__location__australia .box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 394px;
+    width: 375px;
+  }
+  body .section__location__australia .box h2 {
+    margin: 80px 24px 24px 24px;
+    width: 327px;
+    height: 36px;
+    text-align: center;
+  }
+  body .section__location__australia .box .box__txt {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  body .section__location__australia .box .box__txt div {
+    width: 327px;
+    height: 75px;
+  }
+  body .section__location__uk {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    margin-top: 0;
+    margin-left: 24px;
+    margin-right: 24px;
+  }
+  body .section__location__uk img {
+    height: 394px;
+    width: 375px;
+  }
+  body .section__location__uk .box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 394px;
+    width: 375px;
+  }
+  body .section__location__uk .box h2 {
+    margin: 80px 24px 24px 24px;
+    width: 327px;
+    height: 36px;
+    text-align: center;
+  }
+  body .section__location__uk .box .box__txt {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  body .section__location__uk .box .box__txt div {
+    width: 327px;
+    height: 75px;
+  }
+  body footer {
+    margin-top: 0;
+  }
+}
 .section__form {
   display: -webkit-box;
   display: -ms-flexbox;
