--- a/src/sass/_location.scss
+++ b/src/sass/_location.scss
@@ -4,22 +4,27 @@
 
   .box {
     @include lowcontainer;
+
     h2 {
       @include lowcontainerH;
     }
 
     .box__txt {
       @include lowcontainerHT;
+
       div {
         @include lowcontainerHTD;
+
         h3 {
           @include lowcontainerHTDH;
         }
+
         p {
           @include lowcontainerHTDP;
         }
       }
     }
+
     img {
       height: 326px;
       width: 350px;
@@ -32,22 +37,27 @@
 
   .box {
     @include lowcontainer;
+
     h2 {
       @include lowcontainerH;
     }
 
     .box__txt {
       @include lowcontainerHT;
+
       div {
         @include lowcontainerHTD;
+
         h3 {
           @include lowcontainerHTDH;
         }
+
         p {
           @include lowcontainerHTDP;
         }
       }
     }
+
     img {
       height: 326px;
       width: 350px;
@@ -60,25 +70,147 @@
 
   .box {
     @include lowcontainer;
+
     h2 {
       @include lowcontainerH;
     }
 
     .box__txt {
       @include lowcontainerHT;
+
       div {
         @include lowcontainerHTD;
+
         h3 {
           @include lowcontainerHTDH;
         }
+
         p {
           @include lowcontainerHTDP;
         }
       }
     }
+
     img {
       height: 326px;
       width: 350px;
+    }
+  }
+}
+
+@media (max-width: 375px) {
+  body {
+    height: 3443px;
+
+    .section__location__belgium {
+      display: flex;
+      flex-direction: column-reverse;
+      margin-top: 0;
+      margin-left: 24px;
+      margin-right: 24px;
+
+      img {
+        height: 394px;
+        width: 375px;
+      }
+
+      .box {
+        display: flex;
+        flex-direction: column;
+        height: 394px;
+        width: 375px;
+        h2{
+          margin: 80px 24px 24px 24px;
+          width: 327px;
+          height: 36px;
+          text-align: center;
+        }
+
+        .box__txt {
+          display: flex;
+          flex-direction: column;
+
+          div {
+            width: 327px;
+            height: 75px;
+          }
+        }
+      }
+    }
+
+    .section__location__australia {
+      display: flex;
+      flex-direction: column;
+      margin-top: 0;
+      margin-left: 24px;
+      margin-right: 24px;
+
+      img {
+        height: 394px;
+        width: 375px;
+      }
+
+      .box {
+        display: flex;
+        flex-direction: column;
+        height: 394px;
+        width: 375px;
+        h2{
+          margin: 80px 24px 24px 24px;
+          width: 327px;
+          height: 36px;
+          text-align: center;
+        }
+
+        .box__txt {
+          display: flex;
+          flex-direction: column;
+
+          div {
+            width: 327px;
+            height: 75px;
+          }
+        }
+      }
+    }
+
+    .section__location__uk {
+      display: flex;
+      flex-direction: column-reverse;
+      margin-top: 0;
+      margin-left: 24px;
+      margin-right: 24px;
+
+      img {
+        height: 394px;
+        width: 375px;
+      }
+
+      .box {
+        display: flex;
+        flex-direction: column;
+        height: 394px;
+        width: 375px;
+        h2{
+          margin: 80px 24px 24px 24px;
+          width: 327px;
+          height: 36px;
+          text-align: center;
+        }
+
+        .box__txt {
+          display: flex;
+          flex-direction: column;
+
+          div {
+            width: 327px;
+            height: 75px;
+          }
+        }
+      }
+    }
+    footer{
+      margin-top: 0;
     }
   }
 }
