--- a/src/sass/_location.scss
+++ b/src/sass/_location.scss
@@ -112,6 +112,7 @@
       img {
         height: 394px;
         width: 375px;
+        margin-top: 24px;
       }
 
       .box {
@@ -119,6 +120,7 @@
         flex-direction: column;
         height: 394px;
         width: 375px;
+        border-radius: 0px;
         h2{
           margin: 80px 24px 24px 24px;
           width: 327px;
@@ -155,6 +157,7 @@
         flex-direction: column;
         height: 394px;
         width: 375px;
+        border-radius: 0px;
         h2{
           margin: 80px 24px 24px 24px;
           width: 327px;
@@ -191,6 +194,7 @@
         flex-direction: column;
         height: 394px;
         width: 375px;
+        border-radius: 0px;
         h2{
           margin: 80px 24px 24px 24px;
           width: 327px;
