--- a/src/sass/_webdesign.scss
+++ b/src/sass/_webdesign.scss
@@ -28,7 +28,8 @@ body {
     align-items: center;
     @media screen and(max-width: 375px) {
       flex-direction: column;
-      background-image: none;
+      background-image: url(../img/rondS.png);
+      background-position: right;
       background-color: $pink;
       margin: 0 auto 96px;
       width: 375px;
